--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=8080
 
+# ?? ??? ?? ??
+spring.mvc.static-path-pattern=/static/**
+spring.web.resources.static-locations=classpath:/static/
+
+# Thymeleaf ??? ?? ??
+spring.thymeleaf.prefix=classpath:/templates/
