[Default branch Commit] 디폴트 설정 파일 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,13 @@ server:
   port: 8080
 
 spring:
+  thymeleaf:
+    prefix: classpath:templates/
+    check-template-location: true
+    suffix: .html
+    mode: HTML
+    cache: false
+    # defalut ==> cache: false , 개발시에는 false로 사용
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/data
@@ -16,7 +23,7 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-        #show_sql: true
+        show_sql: true
         format_sql: true
         default_batch_fetch_size : 100
     generate-ddl: true
