--- a/build.gradle
+++ b/build.gradle
@@ -24,13 +24,13 @@ repositories {
 dependencies {
     // implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
     // implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     compileOnly 'org.projectlombok:lombok'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     implementation 'junit:junit:4.13.1'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
