--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,22 +11,32 @@ spring:
     # defalut ==> cache: false , 개발시에는 false로 사용
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/data
+    url: jdbc:mysql://localhost:3306/study
     username: root
     password: root123
-  h2:
-    console:
-      enabled: true
 
-  jpa:
-    hibernate:
-      ddl-auto: create
-    properties:
-      hibernate:
-        show_sql: true
-        format_sql: true
-        default_batch_fetch_size : 100
-    generate-ddl: true
+mybatis:
+    configuration:
+      multiple-result-sets-enabled: false
+      map-underscore-to-camel-case: true
+      call-setters-on-nulls: true
+      jdbc-type-for-null: varchar
+      default-fetch-size: 500
+    mapper-locations: classpath:static/mapper/*.xml
+
+  #h2:
+      #console:
+    #enabled: true
+
+    #jpa:
+      #hibernate:
+    #ddl-auto: create
+      #properties:
+      #hibernate:
+      #show_sql: true
+      #format_sql: true
+    #default_batch_fetch_size : 100
+    #generate-ddl: true
 
 logging:
   level:
